multi: add label to account
